--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.0.2",
     "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
